--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/Spinning_Duck.gif">
     <title>PATO</title>
+    <style>
+        img {
+            margin-top: 20%;
+            margin-bottom: 20%;
+        }
+    </style>
 </head>
 <body>
-    <img src="./img/Spinning_Duck.gif" alt="es un pato">
+    <center><img src="./img/Spinning_Duck.gif" alt="es un pato"></center>
 </body>
 </html>
