--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6626587662226721"
      crossorigin="anonymous"></script>
     <meta name="google-adsense-account" content="ca-pub-6626587662226721">
@@ -17,5 +18,19 @@
 </head>
 <body>
     <center><img src="./img/Spinning_Duck.gif" alt="es un pato"></center>
+    <div>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6626587662226721"
+            crossorigin="anonymous"></script>
+        <!-- Principal -->
+        <ins class="adsbygoogle"
+            style="display:block"
+            data-ad-client="ca-pub-6626587662226721"
+            data-ad-slot="6761635928"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
 </body>
 </html>
