--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             margin-top: 10%;
             margin-bottom: 10%;
         }
+        div {
+            background-color: rgb(140, 117, 194);
+            border-radius: 20px;
+            margin: 5%;
+        }
     </style>
 </head>
 <body>
